--- a/Emergency_API/requirements.txt
+++ b/Emergency_API/requirements.txt
@@ -1,7 +1,3 @@
-streamlit==1.31.0
-pymysql==1.1.0
-pandas==2.1.4
-plotly==5.18.0
-cryptography==41.0.7
-qrcode[pil]==7.4.2
-Pillow==10.1.0
+streamlit
+pymysql
+pandas
